WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211973
REGRESSION (
r249091
): Can't click on a video in the second column of a paginated web view
https://bugs.webkit.org/show_bug.cgi?id=211973
Summary
REGRESSION (r249091): Can't click on a video in the second column of a pagina...
Simon Fraser (smfr)
Reported
2020-05-15 17:04:59 PDT
Can't click on a video in the second column of a paginated web view
Attachments
Patch
(6.70 KB, patch)
2020-05-15 17:08 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-15 17:08:36 PDT
Created
attachment 399529
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-15 17:08:39 PDT
<
rdar://problem/61418775
>
EWS
Comment 3
2020-05-15 19:07:04 PDT
Committed
r261774
: <
https://trac.webkit.org/changeset/261774
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399529
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug